lgottwebos: fix sorttypes, fix null cats, fix layout in epgNext, added overflow-x scrolling epgNext , added line-height and line-clamps in epgNext

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -21,17 +21,20 @@ body{
 	z-index: 2;
 	background: rgba(0,0,0,0.26);
 	}
-	.logo{
+	.logo {
 		position: relative;
 		left: 158px;
 		width: 231px;
 		height: 100%;
+		opacity: 0.54;
 		background-image: url("../assets/lanet-link-kiev-ua.png");
 		background-repeat: no-repeat;
 		background-size: 100% 50%;
 		background-position: center;
-
 		z-index: 7;}
+	.logo:focus {
+		opacity: 0.87;
+	}
 	.ic_notifications{
 		position: absolute;
 		right:24px;
@@ -109,19 +112,59 @@ body{
 		background-color: white;
 		height: 120px;
 		font-size: 20px;
+		color:black;
 	}
-		.sorttype{
+		/*.sorttype{
 			position: relative;
 			display: block;
 			height: 60px;
 			margin-left:41px;
 			line-height: 60px;
+			opacity: 0.54;
+
 		}
 		.sorttype [type=checkbox]{
 			position: absolute;
 			right:41px;
 			top:20px;
 		}
+		.sorttype:focus{
+			opacity: 0.87;
+		}
+		.sorttype[disabled=true]{
+			opacity: 0.26;
+		}
+		.sorttype[disabled=true]:focus{
+			opacity: 0.26;
+		}*/
+		.sorttype{
+			position: relative;
+			width: 100%;
+			height: 60px;
+			line-height: 60px;
+			opacity: 0.87;
+		}
+		.sorttype   span{
+			margin-left: 41px;
+		}
+		.sorttype [type=checkbox] {
+			position: absolute;
+			right: 41px;
+			top: 20px;
+		}
+		.sorttype:focus{
+			border-left-style: inset;
+			border-left-color: black;
+			border-left-width: 7px;
+			opacity: 0.87;
+		}
+		.sorttype[disabled=true]{
+			opacity: 0.26;
+		}
+		.sorttype[disabled=true]:focus{
+			opacity: 0.26;
+		}
+
 
 
 	.genreslist{
@@ -170,43 +213,48 @@ body{
 	/*background: rgba(0,61,61,0);*/
 	z-index: 5;
 	overflow-x: auto;
-	overflow-y: auto; 
+/*	overflow-y: auto;*/ 
 	/*font-size:1em;*/
 }
-
+	.footer.footerWithGenres{
+		left: 544px;
+		width: calc(100% - 544px);
+	}
+	.epgContainer{
+		/*width:10000px;*/
+		min-width: 50%;
+	}
 	.epgNext{
+		display:block;
+    	position:relative;
+		float:left;
 		width:598px;
 		height: 90px;
 		word-wrap:break-word;
     	white-space:normal;	
-    	position:relative;
-		/*margin:0;*/
 		color: white;
-		/*padding:8px;*/
-		/*padding-top: 16px;*/
-		/*padding-bottom: 20px;*/
-		
-		display:block;
-		float:left;
-		/*margin:8px;*/
 		margin-left: 14px;
 		border-radius: 2px;
 		transition: all 150ms linear;
 		opacity: 0.54;
-		/*padding-right: 42px;*/
-
-
 		background: rgba(0,0,0,0.54);
 		/*box-shadow: 2px 2px 3px #ffffff;*/
 	}
 	.epgNext span{
 		word-wrap:break-word;
-		display: block;
-		/*opacity: 0.87;*/
+		white-space: normal;
+		display: -webkit-box;
+		/*height: 50px;*/
+		overflow: hidden;
+		text-overflow:ellipsis;
+		-webkit-line-clamp:2;
+		-webkit-box-orient:vertical;
+		line-height: 1.5;
 		font-size: 20px;
 		margin-left: 82px;
-		margin-right: 82px;
-		/*padding-top:16px;*/
+		margin-right: 95px;
+		margin-top: 18px;
+		margin-bottom: 24px;
 	}
 /*	.ic_bookmark, .ic_favorite{
 		display: block;
@@ -225,23 +273,21 @@ body{
 	}
 	.epgTime{
 		position:absolute;
-		bottom:20px;
-		right: 31px;
+		top:53px;
+		left: 507px;
 		font-size: 20px;
 	}
 
 	.epgTimeLine {
 		position: relative;
-		padding: 0;
-		top:-6px;
-		height: 4px;
+		margin-top:0px;
+		margin-bottom: -3px;
+		height: 3px;
 		display: block;
 		width:598px;
-		/*opacity: 0.54;*/
 		background-color: rgba(255,255,255,0.24);
 		border-radius: 2px;
 		background-clip: padding-box;
-		margin: 0.5rem 0 1rem 0;
 		overflow: hidden; 
 		-webkit-transition: width 0.3s linear;
 		}
